--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,13
+IconResource=C:\Users\yago_\Downloads\icons8-html-5-32.ICO,0
 [ViewState]
 Mode=
 Vid=
